DevOps/21-final-devops-project/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickethub
  namespace: tickethub-raw
spec:
  ingressClassName: nginx
  rules:
    - host: raw.tickethub.localtest.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: {name: tickethub-backend, port: {name: http}}
          - path: /
            pathType: Prefix
            backend:
              service: {name: tickethub-frontend, port: {name: http}}
